Added Images and page structure

--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
 
 <html>
     <head>
-        <title>Google Homepage</title>
+        <title>Google</title>
     </head>
 
-    <body></body>
+    <body>
+        <nav>
+            <ul class="left">
+                <li>About</li>
+                <li>Store</li>
+            </ul>
+
+            <ul class="right">
+                <li>Gmail</li>
+                <li>Images</li>
+                <li><img></li>
+                <li><a href="#">Sign In</a></li>
+            </ul>
+        </nav>
+        <main>
+            <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+            <form>
+                <input type="text">
+                <input type="button" value="Google Search">
+                <input type="button" value="I'm Feeling Lucky">
+            </form>
+        </main>
+        <footer>
+            <section>Current Location</section>
+            <section>
+                <ul class="left">
+                    <li>Advertising</li>
+                    <li>Business</li>
+                    <li>How Search works</li>
+                </ul>
+
+                <ul class="right">
+                    <li>Privacy</li>
+                    <li>Terms</li>
+                    <li>Settings</li>
+                </ul>
+            </section>
+        </footer>
+    </body>
 </html>
