Implemented the navbar and footer

--- a/index.html
+++ b/index.html
@@ -6,43 +6,45 @@
 <html>
     <head>
         <title>Google</title>
+        <link href="./stylesheets/style.css" rel="stylesheet">
     </head>
 
     <body>
         <nav>
             <ul class="left">
-                <li>About</li>
-                <li>Store</li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Store</a></li>
             </ul>
 
             <ul class="right">
-                <li>Gmail</li>
-                <li>Images</li>
-                <li><img></li>
-                <li><a href="#">Sign In</a></li>
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#"><img src="images/more_icon.png"></a></li>
+                <li><a class="signin" href="#">Sign In</a></li>
             </ul>
         </nav>
         <main>
-            <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+            <img class="logo" alt="Google" src="images/google_logo.png">
             <form>
                 <input type="text">
+                <br>
                 <input type="button" value="Google Search">
                 <input type="button" value="I'm Feeling Lucky">
             </form>
         </main>
         <footer>
-            <section>Current Location</section>
-            <section>
+            <section class="location"><a href="#">Current Location</a></section>
+            <section class="footer">
                 <ul class="left">
-                    <li>Advertising</li>
-                    <li>Business</li>
-                    <li>How Search works</li>
+                    <li><a href="#">Advertising</a></li>
+                    <li><a href="#">Business</a></li>
+                    <li><a href="#">How Search works</a></li>
                 </ul>
 
                 <ul class="right">
-                    <li>Privacy</li>
-                    <li>Terms</li>
-                    <li>Settings</li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Settings</a></li>
                 </ul>
             </section>
         </footer>
