--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<!--A recreation of the Google Homepage
+<!--====================================
+    A recreation of the Google Homepage
     Author: ImpulseDev
--->
+======================================-->
 
 <html>
     <head>
         <title>Google</title>
-        <link href="./stylesheets/style.css" rel="stylesheet">
+        <link href="stylesheets/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -26,7 +27,7 @@
         <main>
             <img class="logo" alt="Google" src="images/google_logo.png">
             <form>
-                <input type="text">
+                <input type="search" name="search" id="search">
                 <br>
                 <input type="button" value="Google Search">
                 <input type="button" value="I'm Feeling Lucky">
